ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mis-homepage-ingress
  namespace: mishomepage
spec:
  ingressClassName: traefik
  rules:
  - host: mis-homepage.eagle.corp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mishomepage
            port:
              number: 80
